Add chrome extension tip for not installed user.

--- a/src/app/home/user-action/chrome-extension-tip/chrome-extension-tip.html
+++ b/src/app/home/user-action/chrome-extension-tip/chrome-extension-tip.html
@@ -6,4 +6,7 @@
         <a [href]="'https://chrome.google.com/webstore/detail/' + chromeExtensionId">前往Chrome商店</a>
         <!--<a (click)="installExtension($event)"></a>-->
     </div>
+    <div class="popover-footer">
+        <button class="ui tiny button" (click)="onClickButton()">我知道了</button>
+    </div>
 </div>
