--- a/src/app/home/user-action/chrome-extension-tip/chrome-extension-tip.less
+++ b/src/app/home/user-action/chrome-extension-tip/chrome-extension-tip.less
@@ -58,4 +58,8 @@
     transform: rotate(45deg);
     z-index: 2;
   }
+  .popover-footer {
+    text-align: right;
+    padding: 0 0.5rem 0.5rem 0;
+  }
 }
