--- a/src/app/static-content/apps/apps.html
+++ b/src/app/static-content/apps/apps.html
@@ -6,4 +6,10 @@
     <p>
         <a href="https://play.google.com/store/apps/details?id=me.sunzheng.mana">Mana</a>
     </p>
+    <h1 class="ui header">Chrome扩展</h1>
+    <p>
+        Chrome扩展用来增强Web版的信息显示与社交功能，使用之后您可以在{{siteTitle}}绑定您的Bangumi帐号，
+        之后{{siteTitle}}就会变成一个Bangumi客户端。您可以自动同步收藏，观看进度，查看和发表评论。
+    </p>
+    <p><a [href]="'https://chrome.google.com/webstore/detail/' + chromeExtensionId">前往Chrome商店</a></p>
 </div>
