--- a/src/app/admin/announce/edit-announce/edit-announce.html
+++ b/src/app/admin/announce/edit-announce/edit-announce.html
@@ -19,13 +19,13 @@
                 <li *ngFor="let error of announceFormErrors.sort_order">{{error}}</li>
             </ul>
         </div>
-        <div class="field" [ngClass]="{error: announceFormErrors.url.length > 0}">
+        <div class="field" [ngClass]="{error: announceFormErrors.content.length > 0}">
             <label>URL</label>
-            <input formControlName="url" placeholder="请输入跳转的url">
+            <input formControlName="content" placeholder="请输入跳转的url">
         </div>
-        <div class="ui error message" *ngIf="announceFormErrors.url.length > 0">
+        <div class="ui error message" *ngIf="announceFormErrors.content.length > 0">
             <ul class="list">
-                <li *ngFor="let error of announceFormErrors.url">{{error}}</li>
+                <li *ngFor="let error of announceFormErrors.content">{{error}}</li>
             </ul>
         </div>
         <div class="field" [ngClass]="{error: announceFormErrors.image_url.length > 0}">
