add recommend column in the default component

--- a/src/app/home/default/default.less
+++ b/src/app/home/default/default.less
@@ -6,6 +6,13 @@
   padding-top: 2rem;
 }
 
+.recommend-header {
+  font-size: 1.1rem;
+  font-weight: bold;
+  padding: 0.5rem 1rem;
+  margin: 0 0 0.8rem 0;
+}
+
 .bangumi-card {
   overflow: hidden;
   .ui.ribbon.label {
