Adjust card height width ratio.

--- a/src/app/home/default/default.html
+++ b/src/app/home/default/default.html
@@ -13,7 +13,7 @@
                 <responsive-image [src]="announce.bangumi.cover_image.url"
                                   [size]="{
                                     width: '100%',
-                                    ratio: 1.405152224824,
+                                    ratio: 0.8,
                                     originalWidth: announce.bangumi.cover_image.width,
                                     originalHeight: announce.bangumi.cover_image.height}"
                                   [background]="announce.bangumi.cover_image.dominant_color"></responsive-image>
