adjust recommend header

--- a/src/app/home/default/default.less
+++ b/src/app/home/default/default.less
@@ -9,8 +9,9 @@
 .recommend-header {
   font-size: 1.1rem;
   font-weight: bold;
-  padding: 0.5rem 1rem;
-  margin: 0 0 0.8rem 0;
+  padding: 0.6rem 1rem;
+  margin: 1rem 0 1.8rem 0;
+  border-bottom: 1px solid #f0f0f0;
 }
 
 .bangumi-card {
