--- a/src/app/home/play-episode/play-episode.less
+++ b/src/app/home/play-episode/play-episode.less
@@ -49,11 +49,11 @@
   }
 
   .feedback-button {
-    display: inline-block;
+    //display: inline-block;
     margin-left: 2rem;
-    padding: 0.3rem 0.5rem;
-    cursor: pointer;
-    color: #606060;
+    //padding: 0.3rem 0.5rem;
+    //cursor: pointer;
+    //color: #606060;
   }
 
   .bangumi-info {
