--- a/src/app/home/bangumi-list/bangumi-list.less
+++ b/src/app/home/bangumi-list/bangumi-list.less
@@ -42,6 +42,9 @@
     font-size: 1rem;
     padding: 1rem 4rem 1rem 0;
     text-align: right;
+    ui-toggle {
+      margin-right: 1rem;
+    }
     .sort-button {
       margin-right: 1rem;
     }
