--- a/src/app/home/my-bangumi/my-bangumi.less
+++ b/src/app/home/my-bangumi/my-bangumi.less
@@ -36,6 +36,10 @@
       position: absolute;
       top: 0.63em;
       right: 1.14em;
+      &.undecorated {
+        background: transparent;
+        color: #999999;
+      }
     }
   }
 }
