add fixsub to libyk source add tips to use not use qq mail

--- a/src/app/register/register.html
+++ b/src/app/register/register.html
@@ -18,7 +18,7 @@
                         <input type="password" formControlName="password_repeat" placeholder="重复密码">
                     </div>
                     <div class="ui field">
-                        <input type="text" formControlName="email" placeholder="Email">
+                        <input type="text" formControlName="email" placeholder="Email(请勿使用QQ邮箱)">
                     </div>
                     <div class="ui field">
                         <input type="text" formControlName="invite_code" placeholder="邀请码">
