--- a/src/app/video-player/controls/controls.html
+++ b/src/app/video-player/controls/controls.html
@@ -1,4 +1,4 @@
-<div class="reflect-state-indicator" (@reflectState.done)="reflectAnimationCallback()" [@reflectState]="reflectState">
+<div class="reflect-state-indicator" (@reflectState.done)="reflectAnimationCallback($event)" [@reflectState]="reflectAnimationState">
     <i class="icon" [ngClass]="reflectIconClass"></i>
 </div>
 <div class="control-wrapper" (click)="onClickVideo($event)" #controlWrapper>
