--- a/src/app/video-player/video-player.less
+++ b/src/app/video-player/video-player.less
@@ -27,6 +27,13 @@
     width: 100%;
     height: 100%;
   }
+
+  &.float-play {
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+    z-index: 204;
+  }
 }
 
 video {
