fix some issues of the float player logic

--- a/src/app/video-player/float-controls/float-controls.html
+++ b/src/app/video-player/float-controls/float-controls.html
@@ -4,7 +4,7 @@
             {{videoTitle}}
         </div>
         <a class="video-close-button">
-            <a class="close-button" (click)="leaveFloat($event)"><i class="remove icon"></i></a>
+            <a class="close-button" (click)="close($event)"><i class="remove icon"></i></a>
         </a>
     </div>
     <div class="center-section">
