--- a/src/app/video-player/controls/config-button/config-panel/config-panel.html
+++ b/src/app/video-player/controls/config-button/config-panel/config-panel.html
@@ -5,4 +5,10 @@
     <div class="inline field">
         <ui-toggle text="自动播放下一集" [(ngModel)]="autoPlayNext" name="auto_play_next"></ui-toggle>
     </div>
+    <div class="inline field">
+        <ui-toggle text="自动浮动播放器模式（滚动）" [(ngModel)]="autoFloatPlayWhenScroll" name="auto_float_play_when_scroll"></ui-toggle>
+    </div>
+    <div class="inline field">
+        <ui-toggle text="自动浮动播放器模式（外部）" [(ngModel)]="autoFloatPlayWhenLeave" name="auto_float_play_when_leave"></ui-toggle>
+    </div>
 </form>
