--- a/src/app/video-player/float-controls/float-controls.less
+++ b/src/app/video-player/float-controls/float-controls.less
@@ -36,6 +36,7 @@
       justify-self: flex-start;
       font-size: 1.2rem;
       padding: 0.1em 1em;
+      white-space: nowrap;
     }
     .close-button {
       flex: 0 1 auto;
@@ -74,6 +75,9 @@
     }
   }
 }
-.scrub-wrapper {
+.progress-bar-wrapper {
   width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
