--- a/src/app/admin/bangumi-detail/bangumi-detail.less
+++ b/src/app/admin/bangumi-detail/bangumi-detail.less
@@ -100,6 +100,9 @@
   background-color: #fff;
   box-shadow:  0 0 2px rgba(0, 0, 0, 0.2);
   padding: 1rem 0;
+  .ui.message {
+    margin: 1rem;
+  }
   .entry {
     position: relative;
     margin: 0 0 0.8em 0;
@@ -127,6 +130,9 @@
         vertical-align: middle;
       }
     }
+  }
+  .add-universal-button {
+    margin: 0 1rem;
   }
 }
 .bangumi-episodes {
