--- a/src/app/admin/bangumi-detail/universal-builder/universal-builder.less
+++ b/src/app/admin/bangumi-detail/universal-builder/universal-builder.less
@@ -28,6 +28,9 @@
   background-color: #fff;
   overflow: hidden;
   padding-top: 4rem;
+  .ui.dropdown .menu {
+    z-index: 300;
+  }
 }
 .search-bar {
   position: absolute;
@@ -52,13 +55,38 @@
   }
 }
 .search-result-wrapper {
+  position: relative;
   height: 100%;
   width: 100%;
   padding-bottom: 5rem;
   overflow-y: scroll;
   overflow-x: auto;
 }
+.no-result-wrapper,
+.searching-wrapper{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  z-index: 200;
+}
 
+.no-result-tip {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 8em;
+  height: 2em;
+  font-size: 4rem;
+  color: #9f9f9f;
+}
+.searching-wrapper .loader {
+  color: #9f9f9f;
+}
 .footer {
   position: absolute;
   width: 100%;
@@ -72,6 +100,7 @@
   align-items: center;
   border-top: 1px solid #e2e2e2;
   background-color: #fff;
+  z-index: 220;
   > .ui.button {
     margin-right: 2rem;
   }
